# AIClinicalDataCrunching

./: .gitignore  README.md  data.ipynb  data_exploration.ipynb  main.py  processed_ICTRP_Results.csv  prompts.py  pyproject.toml  requirements.txt
