[project]
name = "raydatacrunching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "openai>=1.66.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.42",
]
